--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = napari-correct-drift
-version = 0.0.2
+version = 0.2.0
 description = Drift correction 2D/3D for Napari similar to Fijis Correct 3D drift
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -32,8 +32,10 @@ project_urls =
 packages = find:
 install_requires =
     numpy
-    magicgui
     qtpy
+    pandas
+    scikit-image
+    scipy
 
 python_requires = >=3.8
 include_package_data = True
