--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -295,6 +295,9 @@ sphinx==4.5.0
     # via
     #   napari
     #   numpydoc
+sphinx-rtd-theme
+    # via
+    #   myself
 sphinxcontrib-applehelp==1.0.4
     # via sphinx
 sphinxcontrib-devhelp==1.0.2
