--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -237,6 +237,8 @@ pyopengl==3.1.7
     # via napari
 pyproject-hooks==1.0.0
     # via build
+PyQt5
+    # via myself
 python-dateutil==2.8.2
     # via
     #   jupyter-client
