--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = napari-correct-drift
-version = 0.3.0
-description = Drift correction 2D/3D for Napari similar to Fijis Correct 3D drift
+version = 0.4.0
+description = Drift correction 2D/3D for Napari similar to Fijis Correct 3D drift macro
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/sommerc/napari-correct-drift
